Fixed contrast issues and formatting

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -185,13 +185,12 @@ ul {list-style-type: none;}
   margin: 0;
   padding: 10px 0;
   background-color:#ddd;
-  text-wrap:nowrap;
 }
 
 .weekdays li {
   display: inline-block;
   width: 12.6%;
-  color: #666;
+  color: black;
   text-align: center;
 }
 
@@ -209,7 +208,7 @@ ul {list-style-type: none;}
   text-align: center;
   margin-bottom: 5px;
   font-size:12px;
-  color: #777;
+  color: black;
 }
 
 /* Highlight the "current" day */
